# vegetable_script

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  test.sh
src/core/: CMakeLists.txt  Tang.h  UnitTest.cpp  mul.cpp  mul.h
src/core/ast/: CoreASTs.h  Environment.h  all.h  ast_declarations.h  core_asts.h  definition_asts.h  expression_asts.h  statement_asts.h
src/core/common/: all.h  file_util.cpp  file_util.h  multi_enum.h  string_util.cpp  string_util.h  unit_test.h
src/core/common/sugar/: multi_enum.h  pointer.h
src/core/parsing/: Lexer.cpp  Lexer.h  Parser.h  Token.cpp  Token.h  all.h  ebnf.ebnf  expression.ebnf  lexer.cpp  lexer.h  ll1_definition_analyzer.cpp  ll1_definition_analyzer.h  ll1_expression_analyzer.cpp  ll1_expression_analyzer.h  ll1_statement_analyzer.cpp  ll1_statement_analyzer.h  parsing_exception.cpp  parsing_exception.h  source_provider.cpp  source_provider.h  token.cpp  token.h
src/core/parsing/asset/: expression.ebnf
src/core/parsing/obsolete/: lexer.cpp  parser.cpp  parser.h
src/core/running/: all.h  scope.cpp  scope.h  scope_definition_filler.cpp  scope_definition_filler.h  scope_stack.cpp  scope_stack.h
src/core/running/environment/: all.h  expression_result.cpp  expression_result.h  functions.cpp  functions.h  scope.cpp  scope.h  scope_stack.cpp  scope_stack.h  statement_result.cpp  statement_result.h
src/core/running/execute/: all.h  ast_invoker.cpp  ast_invoker.h  double_exception.h  double_expression_invoker.cpp  double_expression_invoker.h  double_statement_invoker.cpp  double_statement_invoker.h
src/core/util/: Pointer.h
src/core/visitor/: ASTSolver.h  ASTStringer.cpp  ASTStringer.h  ast_stringer.cpp  ast_stringer.h
src/core/visitor/obsolete/: ast_solver.h
src/test/: CMakeLists.txt  expression.inc  find.py  main.cpp  test_double_invoker.cpp  test_file.cpp  test_lexer.cpp  test_statement_analyzer.cpp
src/test/sample/: a.js  expression.inc  is_prime.inc
